--- a/app/views/pages/style-guide.html.liquid
+++ b/app/views/pages/style-guide.html.liquid
@@ -275,7 +275,7 @@ metadata:
           </div>
           <div class="table-row">
             <dt class="table-cell">Modifiers:</dt>
-            <dt class="table-cell pl-4 font-mono">button-disabled</dt>
+            <dt class="table-cell pl-4 font-mono">button-disabled button-small</dt>
           </div>
         </dl>
       </section>
@@ -301,7 +301,7 @@ metadata:
           </div>
           <div class="table-row">
             <dt class="table-cell">Modifiers:</dt>
-            <dt class="table-cell pl-4 font-mono">button-disabled</dt>
+            <dt class="table-cell pl-4 font-mono">button-disabled button-small</dt>
           </div>
         </dl>
       </section>
@@ -327,7 +327,7 @@ metadata:
           </div>
           <div class="table-row">
             <dt class="table-cell">Modifiers:</dt>
-            <dt class="table-cell pl-4 font-mono">button-disabled</dt>
+            <dt class="table-cell pl-4 font-mono">button-disabled button-small</dt>
           </div>
         </dl>
       </section>
@@ -421,6 +421,12 @@ metadata:
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
         {% render 'theme/simple/ui/subtitle', label: 'Text inputs' %}
+        <dl class="table">
+          <div class="table-row">
+            <dt class="table-cell">Modifiers:</dt>
+            <dd class="table-cell pl-4 font-mono">form-input-small</dd>
+          </div>
+        </dl>
       </section>
       <section class="w-1/3 p-5 border styleGuide-example">
         <fieldset>
@@ -428,6 +434,26 @@ metadata:
         </fieldset>
         <fieldset class="mt-1">
           <input type="text" disabled placeholder="Disabled input">
+        </fieldset>
+      </section>
+    </div>
+
+    <div class="mt-16 flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Small text inputs' %}
+        <dl class="table">
+          <div class="table-row">
+            <dt class="table-cell">Class:</dt>
+            <dd class="table-cell pl-4 font-mono">form-input-small</dd>
+          </div>
+        </dl>
+      </section>
+      <section class="w-1/3 p-5 border styleGuide-example">
+        <fieldset>
+          <input type="text" class="form-input-small" placeholder="Small text input">
+        </fieldset>
+        <fieldset class="mt-1">
+          <input type="text" class="form-input-small" disabled placeholder="Disabled small input">
         </fieldset>
       </section>
     </div>
