--- a/app/views/pages/dashboard/posts/edit.liquid
+++ b/app/views/pages/dashboard/posts/edit.liquid
@@ -12,7 +12,8 @@ metadata:
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
   function post = 'lib/queries/posts/find', id: context.params.id, creator_id: current_profile.id
   include 'lib/present_or_404', property:  post.id
+  graphql presigned_url = 'photos/presign' | dig: 'presigned'
 
   render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs
-  include 'theme/simple/dashboard/posts/edit', object: post
+  include 'theme/simple/dashboard/posts/edit', object: post, presigned_url: presigned_url
 %}
