--- a/app/views/pages/dashboard/posts/edit_answer.liquid
+++ b/app/views/pages/dashboard/posts/edit_answer.liquid
@@ -9,7 +9,8 @@ metadata:
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
   function post = 'lib/queries/posts/find', id: context.params.id, creator_id: current_profile.id
+  graphql presigned_url = 'photos/presign' | dig: 'presigned'
   include 'lib/present_or_404', property:  post.id
 
-  include 'theme/simple/dashboard/posts/edit_answer', object: post
+  include 'theme/simple/dashboard/posts/edit_answer', object: post, presigned_url: presigned_url
 %}
