--- a/app/views/pages/dashboard/posts/new.liquid
+++ b/app/views/pages/dashboard/posts/new.liquid
@@ -10,7 +10,9 @@ metadata:
 
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  graphql presigned_url = 'photos/presign' | dig: 'presigned'
+  assign object = '{}' | parse_json
 
   render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs
-  include 'theme/simple/dashboard/posts/new'
+  include 'theme/simple/dashboard/posts/new', presigned_url: presigned_url
 %}
