--- a/app/views/pages/dashboard/posts/update.liquid
+++ b/app/views/pages/dashboard/posts/update.liquid
@@ -15,6 +15,7 @@ method: put
     function post_url = 'link_to', post: post
     include 'redirect_to', url: post_url, notice: 'app.models.shared.updated'
   else
-    include 'theme/simple/dashboard/posts/edit', object: object
+    graphql presigned_url = 'photos/presign' | dig: 'presigned'
+    include 'theme/simple/dashboard/posts/edit', object: object, presigned_url: presigned_url
   endif
 %}
