--- a/app/views/partials/theme/simple/dashboard/posts/edit.liquid
+++ b/app/views/partials/theme/simple/dashboard/posts/edit.liquid
@@ -2,4 +2,4 @@
   <h1 class="text-2xl">{{ 'app.models.posts.edit' | t }} {{ object.name  }}</h1>
 </div>
 
-{% include 'theme/simple/dashboard/posts/form', object: object %}
+{% include 'theme/simple/dashboard/posts/form', object: object, presigned_url: presigned_url %}
