--- a/app/views/partials/theme/simple/dashboard/posts/reply.liquid
+++ b/app/views/partials/theme/simple/dashboard/posts/reply.liquid
@@ -1,3 +1,11 @@
+{% liquid
+  unless object
+    assign object = '{}' | parse_json
+  endunless
+  unless object.uuid
+    hash_assign object['uuid'] = '' | uuid
+  endunless
+%}
 <div class="container flex flex-wrap mx-auto groups-center">
   <form action="/dashboard/posts/reply" method="post" class="w-full">
     {% include 'authenticity_token' %}
@@ -7,6 +15,7 @@
     {% if object.id %}
       <input type="hidden" name="post[id]" value="{{ object.id }}" />
     {% endif %}
+    <input type="hidden" name="post[uuid]" value="{{ object.uuid }}" />
 
     <div class="my-5">
       <label class="block" for="body">{{ 'app.models.posts.your_answer' | t }}</label>
@@ -16,3 +25,10 @@
     <button class="button">{{ 'app.models.posts.post_answer' | t }}</button>
   </form>
 </div>
+
+{% render 'theme/simple/photos/s3_form',
+  object_uuid: object.uuid,
+  presigned_url: presigned_url,
+  user_id: user.id,
+  photo_type: 'screenshot'
+%}
