--- a/app/views/partials/theme/simple/posts/show.liquid
+++ b/app/views/partials/theme/simple/posts/show.liquid
@@ -8,4 +8,4 @@
   {% endfor %}
 </div>
 
-{% include 'theme/simple/dashboard/posts/reply', post: root_post, object: object %}
+{% include 'theme/simple/dashboard/posts/reply', post: root_post, object: object, presigned_url: presigned_url %}
